--- a/frontend/layouts/_default/resume.html
+++ b/frontend/layouts/_default/resume.html
@@ -64,11 +64,17 @@
         <!-- Certifications-->
         <div class="resume-card">
             <h2 class="section-title">Certifications</h2>
-            <ul class="certification-list">
-                {{ range .Params.certifications }}
-                <li class="certification-item">{{ . }}</li>
-                {{ end }}
-            </ul>
+            <div class="certification-badges">
+                <a href="https://www.credly.com/badges/b70321d1-5dfe-4a79-9b44-a9928e179cb2/public_url" target="_blank" class="badge-link">
+                    <img src="/images/badges/terraform-badge.avif" alt="Terraform Associate Certification" class="badge-image terraform-badge">
+                </a>
+                <a href="https://www.credly.com/badges/1efe4a02-5b9d-4e10-9a0a-08ae77be328e/public_url" target="_blank" class="badge-link">
+                    <img src="/images/badges/aws-saa.avif" alt="AWS Solutions Architect Associate" class="badge-image aws-badge">
+                </a>
+                <a href="./404.html" target="_blank" class="badge-link">
+                    <img src="/images/badges/ckad.avif" alt="Certified Kubernetes Application Developer" class="badge-image aws-badge">
+                </a>
+            </div>
         </div>
     </div>
 {{ end }}
