fetch visitor count for the footer from lambda function

--- a/frontend/layouts/partials/footer.html
+++ b/frontend/layouts/partials/footer.html
@@ -20,7 +20,7 @@
             </p>
             <div class="footer__visitor-counter">
                 <span class="footer__visitor-text">You are Cosmic Visitor #</span>
-                <span class="footer__visitor-count" id="visitor-count">1,247</span>
+                <span class="footer__visitor-count" id="visitor-count"></span>
             </div>
         </div>
     </div>
