--- a/frontend/layouts/_default/baseof.html
+++ b/frontend/layouts/_default/baseof.html
@@ -14,6 +14,7 @@
     href="/favicon-16x16.png">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <meta name="theme-color" content="#050810">
 </head>
 <body>
     <div id="tsparticles"></div>
