update ckad badge

--- a/frontend/layouts/_default/resume.html
+++ b/frontend/layouts/_default/resume.html
@@ -71,7 +71,7 @@
                 <a href="https://www.credly.com/badges/1efe4a02-5b9d-4e10-9a0a-08ae77be328e/public_url" target="_blank" class="badge-link">
                     <img src="/images/badges/aws-saa.avif" alt="AWS Solutions Architect Associate" class="badge-image aws-badge">
                 </a>
-                <a href="./404.html" target="_blank" class="badge-link">
+                <a href="https://www.credly.com/badges/24cd9797-e5fd-4872-b6de-777677733183/public_url" target="_blank" class="badge-link">
                     <img src="/images/badges/ckad.avif" alt="Certified Kubernetes Application Developer" class="badge-image aws-badge">
                 </a>
             </div>
