--- a/frontend/layouts/_default/contact.html
+++ b/frontend/layouts/_default/contact.html
@@ -17,7 +17,7 @@
                         </div>
                         <div class="contact-details">
                             <h3 class="contact-method">Email</h3>
-                            <a href="mailto:yeoh.60@osu.edu" class="contact-link">work@sengweiyeoh.com</a>
+                            <a href="mailto:contact@sengweiyeoh.com" class="contact-link">contact@sengweiyeoh.com</a>
                         </div>
                     </div>
 
