--- a/frontend/layouts/_default/resume.html
+++ b/frontend/layouts/_default/resume.html
@@ -6,7 +6,7 @@
                 <h1 class="name-title">Sengwei Yeoh</h1>
                 <p class="job-title">Full Stack Developer & Graduate Teaching Associate</p>
                 <div class="contact-info">
-                    <span>yeoh.29@osu.edu</span>
+                    <span>contact@sengweiyeoh.com</span>
                     <span class="divider">•</span>
                     <span>(614)&nbsp;207‑6960</span>
                     <span class="divider">•</span>
